minor bug fixes Parse, OrderService